# ComfyUI-Universal-Extractor

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  __init__.py  pyproject.toml
api/: gallery_api.py
data/: artists.json
gallery_ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
gallery_ui/src/: App.css  App.tsx  index.css  main.tsx
gallery_ui/src/components/gallery/: BoardPickerModal.tsx  BoardShareModal.tsx  CategoryPickerModal.tsx  GalleryInspectorPanel.tsx  GalleryWorkspace.tsx  ImageDetailModal.tsx  MetadataViewerModal.tsx
gallery_ui/src/components/settings/: SettingsWorkspace.tsx
gallery_ui/src/components/shared/: ConfirmDialog.tsx  TextInputDialog.tsx  ToastViewport.tsx  TopNavigation.tsx  WorkspaceSidebar.tsx
gallery_ui/src/components/workbench/: WorkbenchWorkspace.tsx
gallery_ui/src/hooks/: useGalleryData.ts  useLibraryData.ts
gallery_ui/src/i18n/: I18nProvider.tsx  translations.ts
gallery_ui/src/i18n/locales/: en.ts  zh-CN.ts
gallery_ui/src/services/: galleryApi.ts
gallery_ui/src/styles/: base.css  detail.css  gallery.css  header.css  settings.css  sidebar.css  workbench.css  workspace.css
gallery_ui/src/types/: universal-gallery.ts
gallery_ui/src/utils/: formatters.ts  metadata.ts
nodes/: extractor_node.py
py/: constants.py  paths.py  plugin.py
py/gallery/: __init__.py  metadata.py  routes.py  service.py  state_store.py
py/nodes/: __init__.py  extractor_node.py
server/: gallery_api.py
web/comfyui/: top_menu_extension.js
web/js/: universal_extractor.js
